Implemented schedule route
